crates/toml_edit/tests/fixtures/invalid/string-bad-uni-esc.stderr
TOML parse error at line 1, column 14
  |
1 | str = "val\ue"
  |              ^
expected 3 more elements
While parsing a Basic String
